added new files

--- a/RangShala/RangShala.csproj
+++ b/RangShala/RangShala.csproj
@@ -146,11 +146,44 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Acraylic Painting.jpeg" />
+    <Content Include="Images\animee.jpg" />
     <Content Include="Images\AyushiBabariya.jpeg" />
     <Content Include="Images\Back1.jpg" />
+    <Content Include="Images\bappa.jpg" />
+    <Content Include="Images\bird.jpg" />
     <Content Include="Images\bird_artwork.jpeg" />
+    <Content Include="Images\buddha.jpg" />
+    <Content Include="Images\cat.jpg" />
+    <Content Include="Images\deer.jpg" />
+    <Content Include="Images\Distinctive.jpeg" />
+    <Content Include="Images\Drawings.jpeg" />
+    <Content Include="Images\eye.jpg" />
+    <Content Include="Images\Ganpati.jpg" />
+    <Content Include="Images\Ganpatibappa.jpg" />
+    <Content Include="Images\Genuine.jpeg" />
+    <Content Include="Images\girl.jpg" />
+    <Content Include="Images\gouachepainting.jpg" />
+    <Content Include="Images\HanumanDada.jpg" />
+    <Content Include="Images\HillView.jpg" />
+    <Content Include="Images\HousePainting.jpg" />
+    <Content Include="Images\ink.jpg" />
+    <Content Include="Images\lady.jpg" />
     <Content Include="Images\logo.png" />
+    <Content Include="Images\mandala art.jpg" />
+    <Content Include="Images\naturee.jpg" />
+    <Content Include="Images\NightPai.jpg" />
     <Content Include="Images\NiyatiAgravat.jpeg" />
+    <Content Include="Images\oil Painting.jpeg" />
+    <Content Include="Images\owl.jpg" />
+    <Content Include="Images\Panihari.jpg" />
+    <Content Include="Images\panihari1.jpg" />
+    <Content Include="Images\RainyDay.jpg" />
+    <Content Include="Images\Shreenathji.jpg" />
+    <Content Include="Images\shreenathjii.jpg" />
+    <Content Include="Images\SunrisePainting.jpg" />
+    <Content Include="Images\tiger.jpg" />
+    <Content Include="Images\Vibrant.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -182,6 +215,10 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\Artwork.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
+    <Content Include="Views\Home\AcrylicPaintings.cshtml" />
+    <Content Include="Views\Home\Drawings.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
